Thu  4 Feb 2010 22:31:57 GMT - Release 0.82

  Integrated Catalyst::Request::REST::ForBrowsers as
  Catalyst::TraitFor::Request::ForBrowsers. (Dave Rolsky)

  Clarified docs so that they encourage the use of the request traits, rather
  than using Catalyst::Request::REST. (Dave Rolsky)

  When Catalyst::Action::REST or Controller::REST automatically add the trait,
  your request class will no longer end up getting set to
  Catalyst::Request::REST. Instead, creates an anon class with the appropriate
  role. (Dave Rolsky)

  Shut up log output from the tests. (Dave Rolsky)

  Added a $VERSION to every module, mostly to make sure that when people
  install Catalyst::Request::REST::ForBrowsers, they get the version in this
  distro. (Dave Rolsky)

  Change Catalyst::Action::Serialize, Catalyst::Action::Deserialize and
  Catalyst::Action::SerializeBase to be more Moose like.

  Fix JSON and JSON::XS to encode_blessed. (fREW)

  Fix Catalyst::Action::Serialize to use objects instead of classes. (fREW)

  Fix doc nits. (RT#53780)

Thu 14 Jan 20:56:00 GMT 2010 - Release 0.81

  Add a JSONP serialization type.

Sat 19 Dec 14:54:00 GMT 2009 - Release 0.80

  Convert all classes to Moose

  Change Catalyst::Request::REST to be a mostly empty class, with
  all the functionality in Catalyst::TraitFor::Request::REST

  Simplify _get_allowed_methods method (aristotle)

  Rework serializer return so that serializers throw an exception in
  the case of issues serializing the data (hobbs).

Fri 11 Dec 01:08:00 GMT 2009 - Release 0.79

  Cope with invalid (missing required q parameter) header like:
  application/json; charset="utf-8"

  Fix documentation to not mention deprecated things and generally be
  in better style.

  Make author information consistant and only in one module.

Mon 28 Sep 15:01:03 BST 2009 - Release 0.78

  Require Moose for the tests (RT#50066).

Thu 27 Aug 02:21:09 BST 2009 - Release 0.77

  Allow dispatching to Catalyst Actions, for use with ActionClasses